--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
             <section class="info">
                 <article>
                     <h2>2000грн</h2>
-                    <img src="https://playerok.com/imgproxy/1AEGTXk-j4ZFZLumaf9XAXz3wF0iHA3NRVp_seHt6Y0/wm:0.8:soea:5:2:0.2/rs:fill:0:1000:0/g:no/quality:99/czM6Ly9wbGF5ZXJvay8vaW1hZ2VzLzFlZTU2NTA1LWU3YzQtNjk0MC0wZGQzLTRkNjZlZDg5ZDYxNC5wbmc.jpg" width="300px" height="300px"/>
+                    <img src="https://learn.logikaschool.com/imgproxy/1AEGTXk-j4ZFZLumaf9XAXz3wF0iHA3NRVp_seHt6Y0/wm:0.8:soea:5:2:0.2/rs:fill:0:1000:0/g:no/quality:99/czM6Ly9wbGF5ZXJvay8vaW1hZ2VzLzFlZTU2NTA1LWU3YzQtNjk0MC0wZGQzLTRkNjZlZDg5ZDYxNC5wbmc.jpg" width="300px" height="300px"/>
                     <h2>13500 v-bucks</h2>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
                 <article>
                     <h2>500грн</h2>
-                    <img src="https://134147630.cdn6.editmysite.com/uploads/1/3/4/1/134147630/s850107354677210263_p35_i1_w300.jpeg" width="330px" height="300px"/>
+                    <img src="https://learn.logikaschool.com/uploads/1/3/4/1/134147630/s850107354677210263_p35_i1_w300.jpeg" width="330px" height="300px"/>
                     <h2>2800 v-bucks</h2>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
                 <article>
                     <h2>1000грн</h2>
-                    <img src="https://frimzi.com/uploads/142/MXvnI3CaBh3sO7DsMaM6Q5CqM8lCh6-metaVkJ1Y2tzIDUwMDAuanBn-.jpg" width="300px" height="200px"/>
+                    <img src="https://learn.logikaschool.com/uploads/142/MXvnI3CaBh3sO7DsMaM6Q5CqM8lCh6-metaVkJ1Y2tzIDUwMDAuanBn-.jpg" width="300px" height="200px"/>
                     <p>5000 v-bucks</p>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
                 <article>
                     <h2>200грн</h2>
-                    <img src="https://content.rozetka.com.ua/goods/images/big/7336044.jpg" width="300px" height="200px"/>
+                    <img src="https://learn.logikaschool.com/goods/images/big/7336044.jpg" width="300px" height="200px"/>
                     <p>1000 v-bucks</p>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
             </section>
-            <img class="vz" src="https://cdn2.unrealengine.com/social-image-chapter4-s3-3840x2160-d35912cc25ad.jpg" width="960" height="270"/>
+            <img class="vz" src="https://learn.logikaschool.com/social-image-chapter4-s3-3840x2160-d35912cc25ad.jpg" width="960" height="270"/>
         </main>
         <footer>
             <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
