--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body background="black">
         <header>
-            <img class="but" src="/uploads/2021/02/logo_0_1613588860.svg">
+            <img class="but" src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg">
             <a class="button" href="https://fornite.market/">Знижки</a>
         </header>
         <nav>
@@ -19,13 +19,13 @@
             <section class="info">
                 <article>
                     <h2>2000грн</h2>
-                    <img src="https://learn.logikaschool.com/imgproxy/1AEGTXk-j4ZFZLumaf9XAXz3wF0iHA3NRVp_seHt6Y0/wm:0.8:soea:5:2:0.2/rs:fill:0:1000:0/g:no/quality:99/czM6Ly9wbGF5ZXJvay8vaW1hZ2VzLzFlZTU2NTA1LWU3YzQtNjk0MC0wZGQzLTRkNjZlZDg5ZDYxNC5wbmc.jpg" width="300px" height="300px"/>
+                    <img src="https://playerok.com/imgproxy/1AEGTXk-j4ZFZLumaf9XAXz3wF0iHA3NRVp_seHt6Y0/wm:0.8:soea:5:2:0.2/rs:fill:0:1000:0/g:no/quality:99/czM6Ly9wbGF5ZXJvay8vaW1hZ2VzLzFlZTU2NTA1LWU3YzQtNjk0MC0wZGQzLTRkNjZlZDg5ZDYxNC5wbmc.jpg" width="300px" height="300px"/>
                     <h2>13500 v-bucks</h2>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
                 <article>
                     <h2>500грн</h2>
-                    <img src="https://learn.logikaschool.com/uploads/1/3/4/1/134147630/s850107354677210263_p35_i1_w300.jpeg" width="330px" height="300px"/>
+                    <img src="https://134147630.cdn6.editmysite.com/uploads/1/3/4/1/134147630/s850107354677210263_p35_i1_w300.jpeg" width="330px" height="300px"/>
                     <h2>2800 v-bucks</h2>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
