--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
                 </article>
                 <article>
                     <h2>1000грн</h2>
-                    <img src="https://learn.logikaschool.com/uploads/142/MXvnI3CaBh3sO7DsMaM6Q5CqM8lCh6-metaVkJ1Y2tzIDUwMDAuanBn-.jpg" width="300px" height="200px"/>
+                    <img src="https://frimzi.com/uploads/142/MXvnI3CaBh3sO7DsMaM6Q5CqM8lCh6-metaVkJ1Y2tzIDUwMDAuanBn-.jpg" width="300px" height="200px"/>
                     <p>5000 v-bucks</p>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
                 <article>
                     <h2>200грн</h2>
-                    <img src="https://learn.logikaschool.com/goods/images/big/7336044.jpg" width="300px" height="200px"/>
+                    <img src="https://content.rozetka.com.ua/goods/images/big/7336044.jpg" width="300px" height="200px"/>
                     <p>1000 v-bucks</p>
                     <a class="article-but" href="https://fornite.market/">Магазин вб</a>
                 </article>
             </section>
-            <img class="vz" src="https://learn.logikaschool.com/social-image-chapter4-s3-3840x2160-d35912cc25ad.jpg" width="960" height="270"/>
+            <img class="vz" src="https://cdn2.unrealengine.com/social-image-chapter4-s3-3840x2160-d35912cc25ad.jpg" width="960" height="270"/>
         </main>
         <footer>
-            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
-            <a href=""><img src="/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.pnhttps://learn.logikaschool.com/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href=""><img src="https://learn.logikaschool.com/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
             <p><b>Напиши - отримай <br/> промокод!</b></p> 
         </footer>
     </body>
