--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img class="vz" src="https://cdn2.unrealengine.com/social-image-chapter4-s3-3840x2160-d35912cc25ad.jpg" width="960" height="270"/>
         </main>
         <footer>
-            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.pnhttps://learn.logikaschool.com/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href=""><img src="https://learn.logikaschool.com/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
             <a href=""><img src="https://learn.logikaschool.com/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
             <p><b>Напиши - отримай <br/> промокод!</b></p> 
         </footer>
